testando novos parametros